<?xml version="1.0"?>
<package format="2">
  <name>prl_hpp_tsid</name>
  <version>0.1.0</version>
  <description>Groups all the packages from this repo.</description>

  <author email="etienne.arlaud@inria.fr">earlaud</author>
  <maintainer email="etienne.arlaud@inria.fr">earlaud</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>prl_hpp</exec_depend>
  <exec_depend>prl_tsid</exec_depend>
  <exec_depend>prl_pinocchio</exec_depend>

  <url type="repository">https://github.com/inria-paris-robotics-lab/prl_hpp_tsid</url>
  <url type="bugtracker">https://github.com/inria-paris-robotics-lab/prl_hpp_tsid/issues</url>
</package>
