<?xml version="1.0"?>
<package format="2">
  <name>prl_pinocchio</name>
  <version>0.1.0</version>
  <description>The prl_pinocchio package</description>

  <author email="etienne.arlaud@inria.fr">earlaud</author>
  <maintainer email="etienne.arlaud@inria.fr">earlaud</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospkg</exec_depend>

  <url type="repository">https://github.com/inria-paris-robotic-lab/prl_hpp_tsid</url>
  <url type="bugtracker">https://github.com/inria-paris-robotic-lab/prl_hpp_tsid/issues</url>
</package>
